# yojana-sahayak-assistant

./: .env.example  .gitignore  Dockerfile  FOR_SUBH.md  Makefile  README.md  pyproject.toml  requirements.txt
data/: asr_benchmark.json  core_schemes.jsonl
notebooks/: day3_on_kaggle_yojana_sahayak_finetune.ipynb
scripts/: setup_mlx_model.py
tests/: test_core.py
yojana_sahayak/: __init__.py  cli.py  config.py  demo.py
yojana_sahayak/agent/: pipeline.py
yojana_sahayak/asr/: groq_asr.py  whisper.py
yojana_sahayak/bot/: telegram_bot.py
yojana_sahayak/data_pipeline/: extract.py  generate_qa.py
yojana_sahayak/llm/: generator.py  groq_generator.py
yojana_sahayak/mcp/: server.py
yojana_sahayak/rag/: retriever.py
yojana_sahayak/tts/: speaker.py
