[project]
name = "yojana-sahayak"
version = "2.0.0"
description = "Sovereign Voice Agent for Indian Government Schemes — offline multilingual AI with MCP tools"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Subhash Gupta", email = "subhashgupta1591@gmail.com"},
]
keywords = [
    "voice-ai", "mcp", "rag", "indian-government", "hindi", "multilingual",
    "whisper", "faiss", "qlora", "sovereign-ai", "air-gapped",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "soundfile>=0.12.0",
    "mlx-whisper>=0.1.0",
    "sounddevice>=0.4.0",
    "scipy>=1.10.0",
    "mlx-lm>=0.10.0",
    "parler-tts>=1.0.0",
    "transformers>=4.40.0",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0.0"]
demo = ["gradio>=4.0.0"]
dev = ["pytest>=7.0", "ruff>=0.3.0"]
all = ["yojana-sahayak[mcp,demo,dev]"]

[project.scripts]
yojana-mcp = "yojana_sahayak.mcp.server:main"
yojana-cli = "yojana_sahayak.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["yojana_sahayak*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
